--- a/FreeImage.dist
+++ b/FreeImage.dist
@@ -1,6 +1,6 @@
 # source
-darcs /extensions/FreeImage                    http://openengine.dk/code/extensions/FreeImage
-darcs-dev /extensions/FreeImage                    fh.daimi.au.dk:/users/cgd/code/extensions/FreeImage
+git /extensions/FreeImage                    https://github.com/OpenEngineDK/extensions-FreeImage.git
+git-dev /extensions/FreeImage                    git@github.com:OpenEngineDK/extensions-FreeImage.git
 
 # windows lib
 win32 /libraries http://openengine.dk/data/libraries/FreeImage-win32.zip
